--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
+:root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 255, 255, 255;
+  --background-end-rgb: 214, 219, 220;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 23 37 84;
+    --background-end-rgb: 17 24 39;
   }
 }
 
@@ -30,4 +30,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-} */
+}
