--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,13 +8,13 @@
   --background-end-rgb: 214, 219, 220;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 23 37 84;
     --background-end-rgb: 17 24 39;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
